--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
+    "html-to-pdfmake": "^2.5.26",
+    "html2pdf.js": "^0.10.3",
+    "lucide-react": "^0.511.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.8",
